--- a/01-编程开发/_posts/2019-09-05-python学习笔记.md
+++ b/01-编程开发/_posts/2019-09-05-python学习笔记.md
@@ -3,6 +3,9 @@ tags: python
 toc : true
 ---
 
+
+![python基础教程](https://www.runoob.com/python/python-tutorial.html)
+
 # ch00 python3的安装
 
 python3 是未来的主流。python2即将停止支持，所以应当尽量使用python3。
@@ -235,7 +238,6 @@ del(list[1]) # 删除列表中的值
     spam = ['hello', 'hi', 'howdy', 'heyas']
     spam.index('hello') # 0
     ```
-
 2. list.append()
 
     将参数添加到列表末尾
@@ -367,3 +369,14 @@ plt.show()
 # ch18 用 GUI 自动化控制键盘和鼠标
 
 # ch19 从web抓取信息
+
+
+python 执行scp
+
+```python
+os.system('scp "%s" "%s:%s"' % (localfile, remotehost, remotefile) )
+````
+
+
+[Neural networks and deep learning](http://neuralnetworksanddeeplearning.com/chap4.html)
+
