--- a/01-编程开发/_posts/2019-09-10-qsub入门.md
+++ b/01-编程开发/_posts/2019-09-10-qsub入门.md
@@ -2,10 +2,9 @@
 
 qsub命令用来向SGE提交批处理作业，SGE支持单或多节点作业。
 
-qsub [
-options ] [ command | -- [ command_args ]]
+qsub [options ] [ command | -- [ command_args ]]
 
-1. -@
+1. -a 
 optionfile (contains all valid options)
  就是把qsub命令的可选项组合成一定功能的语句，保存在一个文件中。
  qsub -a optionfilename jobfilename
@@ -21,26 +20,20 @@ date_time   设置作业什么时候可以执行。
 account_string  Identifies the account to which
 the resource consumption of the job should be charged
   设置一个作业的账户名,便于统计该账户使用的资源等信息
-   qsub -A
-testaccountname jobname  
+   qsub -A 
+test account name jobname  
 
 4. -ac
-添加名/值对到作业上下文   -dc 删除。。
-  -sc 设置（修改）。。
-  Contexts provide a way to
-dynamically attach and remove meta-
-    information
-to and from a job. The context variables are not
-    passed to
-the job's execution context in its environment
-    The outcome
-of the evaluation of all -ac, -dc, and -sc options
-    or
-corresponding values in qmon is passed to defined JSV
-    instances as
-parameter with the name -ac.  
 
-5. -ar
+添加名/值对到作业上下文   
+   -dc 删除。。
+   -sc 设置（修改）。。
+   
+Contexts provide a way to dynamically attach and remove meta-information  to and from a job. The context variables are not passed to the job's execution context in its environment  
+
+The outcome of the evaluation of all -ac, -dc, and -sc options or corresponding values in qmon is passed to defined JSV instances as parameter with the name -ac.  
+
+1. -ar
 
 ar_id 分配已提交作业，作为它的一部分，给已存在预约。ar=advance reservation
   qsub -ar 60
