--- a/01-编程开发/_posts/2019-10-30-python科学绘图笔记.md
+++ b/01-编程开发/_posts/2019-10-30-python科学绘图笔记.md
@@ -4,6 +4,10 @@ toc: true
 title: 'Python科学绘图'
 ---
 
+[Matplotlib主页](https://matplotlib.org/)
+[Overview — Matplotlib 3.2.1 documentation](https://matplotlib.org/contents.html)
+
+
 # 1. 读取文件
 
 ## 1. 直接使用for循环和列表读取数据
@@ -94,3 +98,29 @@ plt.figure()
 
 - https://blog.csdn.net/daydayup_668819/article/details/82315565
 - [pandas官方说明](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.read_table.html)
+
+
+# Matplotlib包
+
+## plt.plot()绘制坐标图； 
+## plt.boxplot()箱形图； 
+## plt.bar()条形图； 
+## plt.barh()横向条形图； 
+## plt.polar()极坐标图； 
+## plt.pie()饼图； 
+## plt.psd()功率谱密度图； 
+## plt.specgram()谱图； 
+
+## plt.cohere() X-Y的相关性函数图；
+## plt.xcorr() X-Y的互相关性图
+
+Plot the cross correlation between x and y.
+https://matplotlib.org/api/pyplot_api.html#matplotlib.pyplot.xcorr
+
+## plt.scatter()散点图； 
+## plt.step()步阶图； 
+## plt.hist()直方图；
+## plt.contour()等值图；
+## plt.vlines()垂直图； 
+## plt.stem()柴火图； 
+## plt.plot_date()数据日期；
