--- a/03-读书笔记/_posts/2018-01-01-00-道听途说之言.md
+++ b/03-读书笔记/_posts/2018-01-01-00-道听途说之言.md
@@ -1,3 +1,21 @@
+"It seems that perfection is finally attained not when there is no longer
+anything to add, but when there is no longer anything to take away."
+
+“完美并非无可增，而是不可减。”
+
+--- Antoine de Saint-Exupéry, Terre des Hommes, 1939
+
+
+简单胜过复杂 Simple is better than complex
+
+复杂胜过错综复杂 Complex is better than complicated
+
+把握用词的精确含义对于理解这条令人费解的原则是至关重要的。形容某事复杂，是说它
+由许多部分组成，着重组成成分之多；而形容某事错综复杂，则是指其包含着差异巨大、
+难以预料的行为，强调的是各组成部分之间的杂乱联系。
+
+Would it help? ---Bridge of Spies 间谍之桥
+
 Those who eat their fill speak to the hungry of wonderful times to come.
 吃饱的人在给饥饿的人画饼充饥。
 
@@ -14,8 +32,7 @@ Those who eat their fill speak to the hungry of wonderful times to come.
 7. 识人之才，授之于权
 8. 善于谋人，有容乃大
 
-30年来，我信守一条原则：主宰世界的是利益。在我面前，人们总是用最高尚的动机来标
-榜他们的行为。而我心不在焉地听他们说，心里却在想：找出利益之所在。
+30年来，我信守一条原则：主宰世界的是利益。在我面前，人们总是用最高尚的动机来标榜他们的行为。而我心不在焉地听他们说，心里却在想：找出利益之所在。
 
 --萨特《魔鬼与上帝》
 
