--- a/04-软件使用/_posts/2018-01-06-Windows.md
+++ b/04-软件使用/_posts/2018-01-06-Windows.md
@@ -3,6 +3,17 @@ tags: windows
 toc : true
 ---
 
+
+
+# DOS 命令
+
+
+```dos
+%USERNAME%
+```
+就是当前登陆的用户名
+
+
 # 以后应该不会再用Visual Studio写程序了
 
 在被各种不同的问题坑过之后，我再也不想在类似的问题上纠结了
