如何保存自己的数据

--- a/04-软件使用/_posts/2020-06-05-OneDrive.md
+++ b/04-软件使用/_posts/2020-06-05-OneDrive.md
@@ -33,6 +33,6 @@ OneDrive可以算是网盘界的扛把子，可惜与那些被打出中国的网
 - 如果想存程序源码，存满1T，当然很容易触及文件数量的限制，造成无法存储。
 - 量大还是靠硬盘啊，NTFS格式的硬盘，每个卷中可以存储$4294967295=2^{32}-1$文件，自然满足需求。
   
-这么看来，文件传输速度不改善的情况下，OneDrive的大容量套餐体验一时难以有实质的改善。如果不想用那些免费限速、办了会员还限速的某些国内盘，那只有靠自己了。这也是近年流行NAS的原因之一。
+这么看来，文件传输速度不改善的情况下，OneDrive的大容量套餐体验一时难以有实质的改善。如果不想用那些免费限速、办了会员还限速的某些国内盘，那只有靠自己了。这也是近年流行NAS的原因之一。或者，时刻开着科学上网，速度也许会好很多。
 
 总之，如果你想同步大体积/大数量的小文件，OneDrive或许不是一个好选择。我选择将其作为一个回收站。
