--- a/04-Software/_posts/2020-06-05-OneDrive.md
+++ b/04-Software/_posts/2020-06-05-OneDrive.md
@@ -1,5 +1,3 @@
-# OneDrive
-
 OneDrive是一个非常好的云盘，但在国内的体验真是一言难尽。
 
 ## OneDrive的空间和速度
@@ -10,7 +8,7 @@ OneDrive是一个非常好的云盘，但在国内的体验真是一言难尽。
 
 另外OneDrive内的文件总数也有限制，150000。所以，当你有很多小文件需要存储的时候，需要特别注意。
 
-![小文件太多](../imgs/2020-06-05-OneDrive-1.png)
+![小文件太多](https://github.com/PeaceBomber/blog/raw/master/04-Software/_posts/2020-06-05-OneDrive-1.png)
 
 ## OneDrive的文件随选和Office协作
 
