--- a/03-Reading/_posts/2018-01-01-01-自控力.md
+++ b/03-Reading/_posts/2018-01-01-01-自控力.md
@@ -11,7 +11,7 @@
 
 ## 为了成功做到自控，你必须知道自己为何失败
 
-提供自控力的最有效途径在于，清自己如何失控，为何失控，这将帮助你避开意志力失效
+提供自控力的最有效途径在于，弄清自己如何失控，为何失控，这将帮助你避开意志力失效
 的陷阱。研究表明，自诩意志力坚定的人反而最容易在诱惑面前失控。
 
 自知之明是自控的基础。认识到自己的意志力存在问题，则是自控的关键。本书的每一章
