Signed-off-by: lipengbo <lipengbo@msn.com>

--- a/04-Software/_posts/2018-01-05-Vim笔记.md
+++ b/04-Software/_posts/2018-01-05-Vim笔记.md
@@ -84,7 +84,8 @@ vim -b datafile
 
 :set nowrap
 
-字节位置
+
+## 字节位置与文本总字数
 
 要发现你在文件中的当前字节位置，请用这个命令:
 
@@ -102,7 +103,7 @@ Col 9-16 of 9-16; Line 277 of 330; Word 1806 of 2058; Byte 10580 of 12206
 
 2345go
 
-使用XXD
+## 使用XXD
 
 一个真正的二进制编辑器用两种方式来显示文本: 二进制和十六进制格式。你可以在 Vim
 里通过转换程序 "xxd" 来达到这效果。该程序是随 Vim 一起发布的。
