--- a/04-Software/_posts/2020-06-05-OneDrive.md
+++ b/04-Software/_posts/2020-06-05-OneDrive.md
@@ -33,4 +33,4 @@ OneDrive可以算是网盘界的扛把子，可惜与那些被打出中国的网
   
 这么看来，文件传输速度不改善的情况下，OneDrive的大容量套餐体验一时难以有实质的改善。如果不想用那些免费限速、办了会员还限速的某些国内盘，那只有靠自己了。这也是近年流行NAS的原因之一。或者，时刻开着科学上网，速度也许会好很多。
 
-总之，如果你想同步大体积/大数量的小文件，OneDrive或许不是一个好选择。我选择将其作为一个回收站。
+总之，如果你想同步大体积/大数量的小文件，OneDrive或许不是一个好选择。我选择将其作为一个回收站，或者是一个简单的同步盘，只将最经常使用的文件放在上面进行同步，而不是存储大量文件。
