--- a/04-Software/_posts/2020-12-20-Markdown.md
+++ b/04-Software/_posts/2020-12-20-Markdown.md
@@ -7,3 +7,67 @@ toc : true
 ## 在文档中引用函数使用单引号
 
 Use the `printf()` function.
+
+
+## markdown的默认表格形式
+
+Markdown 制作表格使用 | 来分隔不同的单元格，使用 - 来分隔表头和其他行。
+
+pandoc以及其他工具支持更多的表格形式，
+
+```
+| 表头   | 表头   |
+| ------ | ----  |
+| 单元格 | 单元格 |
+| 单元格 | 单元格 |
+```
+
+来源
+:   [Markdown 表格 | 菜鸟教程](https://www.runoob.com/markdown/md-table.html)
+
+## markdown中公式加颜色
+
+$$\color{blue}{F=ma}$$
+$$\huge{F=ma}$$
+$$\Huge{F=ma}$$
+
+## markdown浏览器插件
+
+- Copy Selection as Markdown
+
+### Markdown Viewer
+
+- Watch this short screencast first (only 3 min): https://youtu.be/c7Lb_Y092ok
+
+- Only Firefox Quantum >= 57 is supported!
+
+- Features
+- Renders remote URLs
+- Granular access to remote origins
+- Multiple markdown parsers
+- Full control over the compiler options
+- Themes (including GitHub theme)
+- GitHub Flavored Markdown (GFM)
+- Auto reload on file change
+- Syntax highlighted code blocks
+- Table of Contents (TOC)
+- MathJax and Emoji support
+- Remembers scroll position
+- URL detection using RegExp
+- Toggle Content Security Policy (CSP)
+- Override page encoding
+- Settings synchronization
+- Raw and rendered markdown views
+- Free and Open Source
+
+- Differences with the Chrome version
+- Access to file URLs is not supported
+- Header detection is not supported, only Path Matching
+- Not an event page
+
+- Read the Full Documentation at: https://github.com/simov/markdown-viewer
+
+下面两个插件也不错，但是没有数学公式支持
+- Markdown Editor for Firefox
+- Markdown Viewer Webext
+
