--- a/04-Software/_posts/2019-10-30-Retext.md
+++ b/04-Software/_posts/2019-10-30-Retext.md
@@ -50,7 +50,7 @@ Edit目录里有修改字体的选项。
 
 我的Retext设置为
 
-![retext00](https://github.com/PeaceBomber/blog/raw/master/04-Software/_posts/2019-10-30-Retext-1.png)
+![retext00]({{site.baseurl}}/assets/images/2019-10-30-Retext-1.png)
 
 ## 缺点
 
