--- a/04-Software/_posts/2020-06-05-OneDrive.md
+++ b/04-Software/_posts/2020-06-05-OneDrive.md
@@ -8,7 +8,7 @@ OneDrive是一个非常好的云盘，但在国内的体验真是一言难尽。
 
 另外OneDrive内的文件总数也有限制，150000。所以，当你有很多小文件需要存储的时候，需要特别注意。
 
-![小文件太多](https://github.com/PeaceBomber/blog/raw/master/04-Software/_posts/2020-06-05-OneDrive-1.png)
+![小文件太多]({{site.baseurl}}/assets/images/2020-06-05-OneDrive-1.png)
 
 ## OneDrive的文件随选和Office协作
 
@@ -30,7 +30,7 @@ OneDrive可以算是网盘界的扛把子，可惜与那些被打出中国的网
 - 如果想存电子书或pdf，Zotero和Calibre这样的软件，给每个文档生成缩略图和简介文件，每次往库中加入一个文件，就会生成两个文件。如果你存了很多电子书或者PDF，那么很容易就突破这个上限。
 - 如果想存程序源码，存满1T，当然很容易触及文件数量的限制，造成无法存储。
 - 量大还是靠硬盘啊，NTFS格式的硬盘，每个卷中可以存储$4294967295=2^{32}-1$文件，自然满足需求。
-  
+
 这么看来，文件传输速度不改善的情况下，OneDrive的大容量套餐体验一时难以有实质的改善。如果不想用那些免费限速、办了会员还限速的某些国内盘，那只有靠自己了。这也是近年流行NAS的原因之一。或者，时刻开着科学上网，速度也许会好很多。
 
 总之，如果你想同步大体积/大数量的小文件，OneDrive或许不是一个好选择。我选择将其作为一个回收站，或者是一个简单的同步盘，只将最经常使用的文件放在上面进行同步，而不是存储大量文件。
