--- a/01-Program/_posts/2020-04-20-Python常见错误.md
+++ b/01-Program/_posts/2020-04-20-Python常见错误.md
@@ -11,15 +11,15 @@
       print('Hello!')
 ```
 
-2、 使用= 而不是 ==
+2、 使用`=`而不是`==`
 
 也会导致“SyntaxError: invalid syntax”
 
 = 是赋值操作符而 == 是等于比较操作。该错误发生在如下代码中：
 
 ```python
-    if spam == 42
-      print('Hello!')
+if spam == 42
+    print('Hello!')
 ```
 
 3、 错误的使用缩进量
