--- a/03-Reading/_posts/2018-01-01-01-自控力.md
+++ b/03-Reading/_posts/2018-01-01-01-自控力.md
@@ -48,27 +48,15 @@
 3. 我想要
 
 
-以自由的名义，每个人都可以选择自主的生活；以生活的名义，谁也不要去鼓励他人牺牲
-。勇敢也罢，懦弱也罢，背后都是个人有选择如何生活的自由。
+以自由的名义，每个人都可以选择自主的生活；以生活的名义，谁也不要去鼓励他人牺牲。勇敢也罢，懦弱也罢，背后都是个人有选择如何生活的自由。
 
-如果你自控的唯一动力就是成为一个足够好的人，那么每当你自我感觉良好的时候，你就
-会放弃自控。
+如果你自控的唯一动力就是成为一个足够好的人，那么每当你自我感觉良好的时候，你就会放弃自控。
 
-不要把支持目标实现的行为误认为是目标本身。不是说你做了一件和你目标一致的事情，
-你就不会再面临危险了。注意观察一下，你是否因为认为某些积极的行为值得称赞，就忘
-了自己实际的目标是什么。 关于进步的问题 即便你没有把意志力挑战当做衡量道德的标
-准，你也有可能陷入“道德许可”的陷阱。
+不要把支持目标实现的行为误认为是目标本身。不是说你做了一件和你目标一致的事情，你就不会再面临危险了。注意观察一下，你是否因为认为某些积极的行为值得称赞，就忘了自己实际的目标是什么。 关于进步的问题 即便你没有把意志力挑战当做衡量道德的标准，你也有可能陷入“道德许可”的陷阱。
 
-不要把支持目标实现的行为误认为是目标本身。不是说你做了一件和你目标一致的事情，
-你就不会再面临危险了。注意观察一下，你是否因为认为某些积极的行为值得称赞，就忘
-了自己实际的目标是什么。
+进步可以激励人，甚至可以提高未来的自控力，但前提是，你要把自己的行动当做努力完成目标的证据。换句话说，你要清楚自己做了什么，并盯紧自己的目标。
 
-进步可以激励人，甚至可以提高未来的自控力，但前提是，你要把自己的行动当做努力完
-成目标的证据。换句话说，你要清楚自己做了什么，并盯紧自己的目标。
-
-做长期计划显然是正确的并且是必需的，但是，不是每个人都有能力制作长期计划的。这
-是一种能力，也几乎是最重要的能力之一，然而，这需要挣扎，需要努力，需要从一点一
-滴开始。
+做长期计划显然是正确的并且是必需的，但是，不是每个人都有能力制作长期计划的。这是一种能力，也几乎是最重要的能力之一，然而，这需要挣扎，需要努力，需要从一点一滴开始。
 
 人脑像一个求知欲很强的学生，对经验有着超乎大家想象的反应。如果你每天都让大脑学
 数学，它就会越来越擅长数学。如果你让它忧虑，它就会越来越忧虑。如果你让它专注，
