--- a/01-Program/_posts/2018-01-01-C语言笔记.md
+++ b/01-Program/_posts/2018-01-01-C语言笔记.md
@@ -17,6 +17,6 @@ printf("ID=%s L1=%14.4f P1=%14.4f L2=%14.4f P2=%14.4f f1=%14.4f f2=%14.4f N21=%f
 id, obs->L[0],obs->P[0],obs->L[1],obs->P[1],f1,f2, obs->L[0]-obs->L[1]-(f1-f2)*(obs->P[0]+obs->P[1])/(f1+f2));
 ```
 
-注意区别其中一个括号)的位置，尽管不不报错，但计算结果是不对的。
+注意区别其中一个括号`)`的位置，尽管不不报错，但计算结果是不对的。
 
 
